Logic issues fix, small fixes
